--- a/Real_Time_DevOps_Project/Project-1_Multi Tier Web Application Stack Setup Locally/vagrant/Manual_provisioning/Vagrantfile
+++ b/Real_Time_DevOps_Project/Project-1_Multi Tier Web Application Stack Setup Locally/vagrant/Manual_provisioning/Vagrantfile
@@ -13,7 +13,7 @@ Vagrant.configure("2") do |config|
    config.vm.define "app01" do |app01|
     app01.vm.box = "geerlingguy/centos7"
     app01.vm.hostname = "app01"
-    app01.vm.network "private_network", ip: "192.168.56.12"
+    app01.vm.network "private_network", ip: "ip"
 	app01.vm.provider "virtualbox" do |vb|
      vb.memory = "1024"
 	 end
