--- a/Real_Time_DevOps_Project/Project-4_ Re-Architecting Web App on AWS Cloud[Cloud Native]/src/main/resources/application.properties
+++ b/Real_Time_DevOps_Project/Project-4_ Re-Architecting Web App on AWS Cloud[Cloud Native]/src/main/resources/application.properties
@@ -1,22 +1,22 @@
 #JDBC Configutation for Database Connection
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://db01:3306/accounts?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
+jdbc.url=jdbc:mysql://vprofile-rds-mysql.cyicet2iv8su.us-east-1.rds.amazonaws.com:3306/accounts?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=admin
-jdbc.password=admin123
+jdbc.password=GdkEoOolnmSh911no5VS
 
 #Memcached Configuration For Active and StandBy Host
 #For Active Host
-memcached.active.host=mc01
+memcached.active.host=vprofile-elasticache-svc.iz2nzo.cfg.use1.cache.amazonaws.com
 memcached.active.port=11211
 #For StandBy Host
 memcached.standBy.host=127.0.0.2
 memcached.standBy.port=11211
 
 #RabbitMq Configuration
-rabbitmq.address=rmq01
-rabbitmq.port=5672
+rabbitmq.address=amqps://b-9fb5569a-ccd8-4c5a-b3b2-7be27757c2aa.mq.us-east-1.amazonaws.com
+rabbitmq.port=5671
 rabbitmq.username=test
-rabbitmq.password=test
+rabbitmq.password=Blue7890bunny
 
 #Elasticesearch Configuration
 elasticsearch.host =192.168.1.85
