--- a/Real_Time_DevOps_Project/Project-4_ Re-Architecting Web App on AWS Cloud[Cloud Native]/src/main/resources/application.properties
+++ b/Real_Time_DevOps_Project/Project-4_ Re-Architecting Web App on AWS Cloud[Cloud Native]/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://vprofile-rds-mysql.cyicet2iv8su.us-east-1.rds.amazonaws.com:3306/accounts?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull
 jdbc.username=admin
-jdbc.password=GdkEoOolnmSh911no5VS
+jdbc.password=8C0oRoIMSUwrJvjbVpVR
 
 #Memcached Configuration For Active and StandBy Host
 #For Active Host
@@ -13,9 +13,9 @@ memcached.standBy.host=127.0.0.2
 memcached.standBy.port=11211
 
 #RabbitMq Configuration
-rabbitmq.address=amqps://b-9fb5569a-ccd8-4c5a-b3b2-7be27757c2aa.mq.us-east-1.amazonaws.com
+rabbitmq.address=amqps://b-0b39333a-da2b-424a-952c-ff6f28a933d2.mq.us-east-1.amazonaws.com
 rabbitmq.port=5671
-rabbitmq.username=test
+rabbitmq.username=rabbit
 rabbitmq.password=Blue7890bunny
 
 #Elasticesearch Configuration
@@ -23,3 +23,5 @@ elasticsearch.host =192.168.1.85
 elasticsearch.port =9300
 elasticsearch.cluster=vprofile
 elasticsearch.node=vprofilenode
+
+
